kubernetes/postgres/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: postgres
    app.kubernetes.io/instance: postgres
