kubernetes/postgres/base/service-monitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-monitor
  namespace: postgres
  labels:
    app.kubernetes.io/instance: postgres
    postgres-operator.crunchydata.com/crunchy-postgres-exporter: "true"
spec:
  selector:
    postgres-operator.crunchydata.com/crunchy-postgres-exporter: "true"
  ports:
    - name: service-monitor
      port: 9187
      protocol: TCP
      targetPort: service-monitor
  clusterIP: None
  sessionAffinity: None
  type: ClusterIP
